Fix list overflow for modern template
This fixes the tendency of large lists to flow past the section header
and cause the columns of the list to not be aligned correctly.
This also fixes an issue with the spacing between the end of said lists
and `<hr>`s.

--- a/templates/modern/css/pdf.css
+++ b/templates/modern/css/pdf.css
@@ -54,7 +54,7 @@ body.pdf {
     }
 
     ul li {
-        width: 26%;
+        width: 33%;
         float: left;
     }
     ul dl {
