--- a/templates/modern/css/screen.css
+++ b/templates/modern/css/screen.css
@@ -95,7 +95,7 @@
     }
     
     ul li {
-        width: 25%;
+        width: 33%;
         float: left;
     }
     ul dl {
